# LIGHT-BELT

./: .gitignore  AGENTS.md  CLAUDE.md  INSTALL_AND_RUN.md  README.md  REVIEW_AND_CHANGES.md  pyproject.toml  硬件连接数据留档.txt
assets/: README.md
config/: layout.yaml  layout_acceptance.yaml  outputs.yaml  show.example.yaml  show.minimal.example.yaml  show_acceptance.yaml  system.yaml  virtual_paths.example.yaml
docs/: CLOSED_LOOP_SPEC.md  IMPLEMENTATION_PLAN.md  README.md  REPORT_ADOPTION.md  SHOW_HARDWARE_ACCEPTANCE_CHECKLIST.md  SHOW_ORCHESTRATION_V1_PLAN.md  SHOW_ORCHESTRATION_V1_SOFTWARE_ACCEPTANCE_CHECKPOINT.md  algorithms.md  architecture.md  configuration.md  rk3588_deployment.md  show_acceptance_report.md
host_services/: __main__.py  auth_manager.py  config.py  deps.py  engine_adapter.py  layout_vocab.py  main.py  real_engine_adapter.py  requirements.txt  response.py  schemas.py  shows_loader.py  shows_manifest.example.json  starry_sky.py  ws.py
light_engine/: clock.py  models.py
scripts/: agent_pipeline.py  agent_worktree.py  monitor_esp32_stats.py  replay_ws2811_breath_trace.py  show_acceptance.py  verify_show_orchestration_baseline.py
tests/: test_adaptive_selector.py  test_agent_campaign.py  test_brightness_tracks.py  test_cabin_v3_e2e_acceptance.py  test_cli.py  test_clock.py  test_clock_integration.py  test_color.py  test_color_timeline.py  test_compositor.py  test_config.py  test_config_validation.py  test_effect_color_timeline.py  test_effect_registry.py  test_effects.py  test_engine.py  test_golden_consistency.py  test_host_layout_vocab.py  (+36 more)
(+244 files in other folders)
