[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "light-engine"
version = "0.1.0"
description = "Video/music driven multi-zone lighting algorithm prototype"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "opencv-python>=4.8",
    "soundfile>=0.12",
    "pyyaml>=6.0",
    "pyserial>=3.5",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.27",
]
host = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=12",
    "pyjwt>=2.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["light_engine*", "host_services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--basetemp=.tmp/pytest"
cache_dir = ".tmp/pytest-cache"
